# soundboard

./: .gitignore  CREDITS  Cargo.toml  README.md  run_linux.sh  soundboard.desktop
.github/workflows/: main.yaml
src/: linux_lib.rs  main.rs  windows_lib.rs  yt_dlp.rs
