[package]
name = "soundboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_egui = "0.38.1"
rand = "0.9.2"
rfd = "0.16.0"
rodio = { version = "0.21.1", features = ["mp3", "wav", "flac", "vorbis"] }
serde = "1.0.228"
serde_json = "1.0.146"

[dependencies.bevy]
version = "0.17.3"
features = [
  "wayland",
  "x11",
  "bevy_winit",
]
