[package]
name = "soundboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_egui = "0.38.1"
rand = "0.9.2"
rfd = "0.16.0"
rodio = { version = "0.21.1", features = ["mp3", "wav", "flac", "vorbis"] }
serde = "1.0.228"
serde_json = "1.0.146"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_picking",
    "multi_threaded",
]

[profile.dev.package."*"]
opt-level = 2
debug = false

[target.'cfg(target_os = "linux")'.dependencies.bevy]
default-features = false
version = "0.17.3"
features = [
  "bevy_log",
  "bevy_window",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "bevy_asset",
  "bevy_picking",
  "wayland",
  "x11"
]